Update Lists, tuples, dicts.ipynb
table fixes

--- a/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
+++ b/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
@@ -600,6 +600,7 @@
     "### Exercise 2 - lists and loops\n",
     "\n",
     "1. The following table contains data from a recent assessment. Make some lists to store this data and then write a loop to calculate the average mark for each question. \n",
+    "\n",
     "| Student | Question 1 | Question 2 | Question 3 |\n",
     "| :-: | :-: | :-: | :-: |\n",
     "| Martin | 6 | 1 | 4 |\n",
@@ -783,14 +784,14 @@
     "| Planet  | Diameter (km) | Mass  | Rotation period |\n",
     "|-----|-----|-----|-----|\n",
     "|Mercury | 4,878           | 0.06   |58.65 (d) | \n",
-    " Venus   | 12,100          | 0.82  | 243 (d) |  \n",
-    " Earth   | 12,756         | 1.00  | 23.934 (h) | \n",
-    " Mars    | 6,794          | 0.11  | 24.623 (h) | \n",
-    " Jupiter | 142,800        | 317.89 | 9.842  (h) | \n",
-    " Saturn  | 120,000        | 95.17 | 10.233 (h) | \n",
-    " Uranus  | 52,400         | 14.56| 16 (h) | \n",
-    " Neptune | 48,400         | 17.24 | 18 (h) | \n",
-    " Pluto   | 2,445          | 0.002 | 6.39 (d) | \n",
+    "|Venus   | 12,100          | 0.82  | 243 (d) |  \n",
+    "|Earth   | 12,756         | 1.00  | 23.934 (h) | \n",
+    "|Mars    | 6,794          | 0.11  | 24.623 (h) | \n",
+    "|Jupiter | 142,800        | 317.89 | 9.842  (h) | \n",
+    "|Saturn  | 120,000        | 95.17 | 10.233 (h) | \n",
+    "|Uranus  | 52,400         | 14.56| 16 (h) | \n",
+    "|Neptune | 48,400         | 17.24 | 18 (h) | \n",
+    "|Pluto   | 2,445          | 0.002 | 6.39 (d) | \n",
     "\n",
     "\n",
     "Planet data taken from: https://www.rmg.co.uk/stories/topics/solar-system-data}\n",
@@ -1126,12 +1127,12 @@
     "\n",
     "Returning to the student data from the previous question, you already have some code to calculate the average and standard deviation for each question. \n",
     "\n",
-    "| Student | Question 1 | Question 2 | Question 3 |\n",
-    "| :-: | :-: | :-: | :-: |\n",
-    "| Martin | 6 | 1 | 4 | 11\n",
-    "| Arthur | 3 | 8 | 4 | 15\n",
-    "| Hemma | 7 | 4 | 5 | 16\n",
-    "| Josh | 4 | 7 | 3 | 14\n",
+    "| Student | Question 1 | Question 2 | Question 3 | Question 4 |\n",
+    "| :-: | :-: | :-: | :-: | :-: |\n",
+    "| Martin | 6 | 1 | 4 | 11 |\n",
+    "| Arthur | 3 | 8 | 4 | 15 |\n",
+    "| Hemma | 7 | 4 | 5 | 16 |\n",
+    "| Josh | 4 | 7 | 3 | 14 |\n",
     "\n",
     "Now, I'd like to turn these set of marks into a set of overall grades for each student. To do that, I'd like to you to write some code to create a new list containing the total marks achieved by each student. i.e for Martin, this would be a total = 6+1+4 = 11. \n",
     "\n",
