HP updated week 9

--- a/weekly_labs/Week_09_Modules_and_Plotting/week_09-lab.ipynb
+++ b/weekly_labs/Week_09_Modules_and_Plotting/week_09-lab.ipynb
@@ -20,6 +20,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Open the Google Colab notebook for this class\n",
+    "\n",
+    "Either:\n",
+    "\n",
+    "github.com/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_09_Modules_and_Plotting/week_09-lab.ipynb\n",
+    "\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_08_Reading_Data/week_08-lab.ipynb) to open this notebook in Google colab.  <br>You'll need to sign in with a Google account before you can run it.  <br>When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "\n",
+    "or\n",
+    "\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_08_Reading_Data/` and open the notebook `week_08-lab.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -56,7 +74,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [
     {
@@ -87,7 +108,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Importing and plotting data\n",
     "Import the data in file `signal_data.csv`. \n",
@@ -100,7 +125,11 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -111,7 +140,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -155,7 +188,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Plotting multiple data series on the same graph\n",
     "\n",
@@ -171,7 +208,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,7 +316,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "To open the data file `infections.zip` and work in this Colab notebook run the cell below\n",
     "\n",
@@ -284,7 +329,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "You can alternatively download the data files `infections.zip` from the command line/ terminal application if you want to work on them locally on your computer. \n",
     "\n",
@@ -360,7 +409,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Import time series data about number of infected individuals\n",
     "\n",
@@ -396,7 +449,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Generate logistic growth curve"
    ]
@@ -433,7 +490,11 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Generate logistic growth time series\n",
@@ -523,7 +584,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Lab exercises\n",
     "\n",
@@ -532,7 +597,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "\n",
     "\n",
@@ -565,7 +634,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 2\n",
     "\n",
@@ -599,7 +672,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 3\n",
     "\n",
@@ -655,7 +732,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 4\n",
     "\n",
