Fixed small errors in data structures

--- a/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
+++ b/weekly_labs/Week_06_Data_Structures/Lists, tuples, dicts.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "or\n",
     "\n",
-    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024/Week_06_Data_Structures/` or just use `git pull` to refresh if you've done this already.\n",
     "- Navigate to the subfolder `weekly_labs/Week_06_Data_Structures` and open the notebook `Lists, tuples, dicts.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
     "\n",
     "## Comprehension Checks\n",
@@ -1148,8 +1148,8 @@
     "| Normalised Mark | Grade | \n",
     "| :-: | :-: | \n",
     "| mark < -1 * standard deviation | Fail | \n",
-    "| -1 * standard deviation < mark < 0 | C | \n",
-    "| 0 < mark < 1 * standard deviation | B | \n",
+    "| -1 * standard deviation <= mark < 0 | C | \n",
+    "| 0 <= mark < 1 * standard deviation | B | \n",
     "| 1 * standard deviation < mark | A | \n",
     "\n",
     "Write some code to turn the normalised mark into a grade for each student, storing the results in a *dictionary* with the student name as the key and grade as the value.\n",
@@ -1325,7 +1325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
