Fixing links in Functions materials

--- a/weekly_labs/Week_11_Functions_01/Functions_labsheet.ipynb
+++ b/weekly_labs/Week_11_Functions_01/Functions_labsheet.ipynb
@@ -21,16 +21,16 @@
     "\n",
     "Either:\n",
     "\n",
-    "- Click [this link](https://github.com/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_06_Data_Structures/Lists%2C%20tuples%2C%20dicts.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_11_Functions_01/Functions_labsheet.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
     "\n",
     "or\n",
     "\n",
     "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
-    "- Navigate to the subfolder `weekly_labs/Week_06_Data_Structures` and open the notebook `Lists, tuples, dicts.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_11_Functions_01` and open the notebook `Functions_labsheet.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar\n",
     "\n",
     "## Comprehension Checks\n",
     "\n",
-    "To check your learning from the pre-watch videos, I've made a separate notebook (here) with a number of quick comprehension checking exercises. Please run through these first and use the results to guide your learning.\n",
+    "To check your learning from the pre-watch videos, I've made a separate notebook ([here](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_11_Functions_01/FunctionsComprehensionChecks.ipynb) ) with a number of quick comprehension checking exercises. Please run through these first and use the results to guide your learning.\n",
     "\n",
     "## Function Definition and Syntax\n",
     "\n",
@@ -1048,6 +1048,8 @@
     "2. Modify the function to also calculate and return the potential energy of the ball at time t.\n",
     "\n",
     "3. Write a second function that calls the height of mass function for values of t in the range [0, 3], with a step of 0.1. Store the outputs in two lists (one for the heights, and one for the potential energies). Use matplotlib to create a single plot showing height vs time and potential energy vs time. Then create a second plot showing what would happen if the ball was thrown on Mars (use gravity on mars = 3.73 $kg/m^2$. Your plot should look like the image below. Think carefully about how many (and which) functions you should use for this exercise and remember the rule of thumb: a function should do one thing.\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/BallHeight.png?raw=true\" width=\"40%\">\n",
     "\n",
     "4. (Bonus) Currently our solution continues to calculate values even when the height of the ball has gone below zero (i.e it's hit the ground). Modify the code to stop calculating results when the height of the ball goes below zero. These changes shouldn't break the code you've written previously!\n",
     "\n"
