Changed mind on order of exercises

--- a/weekly_labs/Week_11_Functions_01/Functions_labsheet.ipynb
+++ b/weekly_labs/Week_11_Functions_01/Functions_labsheet.ipynb
@@ -529,26 +529,7 @@
     "\n",
     "1. Write a function that takes two lists as inputs and returns the minimum and maximum number found in either list. i.e find_min_max([1, 2], [3, 4]) should return (1, 4). \n",
     "\n",
-    "2. Modify your code so that it can take *any* number of lists as input, finding the minimum and maximum across all inputs.\n",
-    "\n",
-    "3. When you choose a password for a website, they often impose a number of restrictions on your choice- i.e. it must over 8 letters and contain a mix of lower and upper case letters and numbers. Write a function to test whether a given password is valid or not. Your function should take 1 positional argument (the password we are checking) and 4 optional arguments. These are:\n",
-    "\n",
-    "- mininum_length (defaults to 10)\n",
-    "- minimum_upper (defaults to one) - this is the minimum number of upper case letters required.\n",
-    "- minimum_lower (defaults to one) - this is the minimum number of lower case letters required.\n",
-    "- minimum_upper (defaults to one) - this is the minimum number of upper case letters required.\n",
-    "\n",
-    "Your function should return *True* if the password is valid. If it's not valid, it should return *False* **and** a string explaining why the password is not valid. If a password fails multiple conditions, you only need to return a string for one of them.\n",
-    "\n",
-    "For example, I would expect the following results if I called your function:\n",
-    "\n",
-    "- check_password_validity(\"Banana9\") returns (False, \"Password must have at least 10 characters\")\n",
-    "- check_password_validity(\"Banana9\", 6) returns True\n",
-    "- check_password_validity(\"Banananana\") returns (False, \"Password must have 1 number\")\n",
-    "- check_password_validity(\"banananana\") returns (False, \"Password must have 1 upper case character\")\n",
-    "- check_password_validity(\"Banananana9\") returns True\n",
-    "- check_password_validity(\"Banananana9\", minimum_upper=2) returns (False, \"Password must have 2 upper case characters\")\n",
-    "\n"
+    "2. Modify your code so that it can take *any* number of lists as input, finding the minimum and maximum across all inputs.\n"
    ]
   },
   {
@@ -722,57 +703,23 @@
    "source": [
     "### Exercise 3\n",
     "\n",
-    "A mass is thrown upwards with speed $v_0 = 10$ m/s.  The equation for the height at time t\n",
-    "is given by\n",
-    "$$\n",
-    "h(t) = v_0 t - \\frac{1}{2}\\, g t^2,\n",
-    "$$\n",
-    "where $t$ is time and $g = 9.8$ m/s$^2$ is the gravitational acceleration.\n",
+    "When you choose a password for a website, they often impose a number of restrictions on your choice- i.e. it must over 8 letters and contain a mix of lower and upper case letters and numbers. Write a function to test whether a given password is valid or not. Your function should take 1 positional argument (the password we are checking) and 4 optional arguments. These are:\n",
     "\n",
-    "The function below will calculate the height of the mass at a given time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1e835cb5-162d-4c31-8fa3-3292ed94d5a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def height_of_mass(t):\n",
-    "    gravity = 9.8\n",
-    "    v0 = 10\n",
+    "- mininum_length (defaults to 10)\n",
+    "- minimum_upper (defaults to one) - this is the minimum number of upper case letters required.\n",
+    "- minimum_lower (defaults to one) - this is the minimum number of lower case letters required.\n",
+    "- minimum_upper (defaults to one) - this is the minimum number of upper case letters required.\n",
     "\n",
-    "    height = v0*t - (0.5 * gravity * t**2)\n",
-    "    \n",
-    "    return height\n",
+    "Your function should return *True* if the password is valid. If it's not valid, it should return *False* **and** a string explaining why the password is not valid. If a password fails multiple conditions, you only need to return a string for one of them.\n",
     "\n",
-    "print(height_of_mass(1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "752a2302-72e7-4353-8e8e-b74fcc2f71fc",
-   "metadata": {},
-   "source": [
-    "1. Modify the function to accept three inputs:\n",
+    "For example, I would expect the following results if I called your function:\n",
     "\n",
-    "    A. time (mandatory)\n",
-    "\n",
-    "   \n",
-    "    B. mass (optional, with default value of 1)\n",
-    "\n",
-    "   \n",
-    "    C. gravity (optional, with default value of 9.8\n",
-    "\n",
-    "2. Modify the function to also calculate and return the potential energy of the ball at time t.\n",
-    "\n",
-    "3. Write a second function that calls the height of mass function for values of t in the range [0, 3], with a step of 0.1. Store the outputs in two lists (one for the heights, and one for the potential energies). Use matplotlib to create a single plot showing height vs time and potential energy vs time. Then create a second plot showing what would happen if the ball was thrown on Mars (use gravity on mars = 3.73 $kg/m^2$. Your plot should look like the image below. Think carefully about how many (and which) functions you should use for this exercise and remember the rule of thumb: a function should do one thing.\n",
-    "\n",
-    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/BallHeight.png?raw=true\" width=\"40%\">\n",
-    "\n",
-    "4. (Bonus) Currently our solution continues to calculate values even when the height of the ball has gone below zero (i.e it's hit the ground). Modify the code to stop calculating results when the height of the ball goes below zero. These changes shouldn't break the code you've written previously!\n",
-    "\n"
+    "- check_password_validity(\"Banana9\") returns (False, \"Password must have at least 10 characters\")\n",
+    "- check_password_validity(\"Banana9\", 6) returns True\n",
+    "- check_password_validity(\"Banananana\") returns (False, \"Password must have 1 number\")\n",
+    "- check_password_validity(\"banananana\") returns (False, \"Password must have 1 upper case character\")\n",
+    "- check_password_validity(\"Banananana9\") returns True\n",
+    "- check_password_validity(\"Banananana9\", minimum_upper=2) returns (False, \"Password must have 2 upper case characters\")\n"
    ]
   },
   {
@@ -946,9 +893,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5f4135a-2beb-4176-b1c6-fe94824ef325",
+   "metadata": {},
+   "source": [
+    "### Bonus Exercise\n",
+    "\n",
+    "I was initially going to do this question for exercise 3, but changed my mind. It's entirely optional, but I've included it here rather than just delete it. \n",
+    "\n",
+    "A mass is thrown upwards with speed $v_0 = 10$ m/s.  The equation for the height at time t\n",
+    "is given by\n",
+    "$$\n",
+    "h(t) = v_0 t - \\frac{1}{2}\\, g t^2,\n",
+    "$$\n",
+    "where $t$ is time and $g = 9.8$ m/s$^2$ is the gravitational acceleration.\n",
+    "\n",
+    "The function below will calculate the height of the mass at a given time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1e835cb5-162d-4c31-8fa3-3292ed94d5a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def height_of_mass(t):\n",
+    "    gravity = 9.8\n",
+    "    v0 = 10\n",
+    "\n",
+    "    height = v0*t - (0.5 * gravity * t**2)\n",
+    "    \n",
+    "    return height\n",
+    "\n",
+    "print(height_of_mass(1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "752a2302-72e7-4353-8e8e-b74fcc2f71fc",
+   "metadata": {},
+   "source": [
+    "1. Modify the function to accept three inputs:\n",
+    "\n",
+    "    A. time (mandatory)\n",
+    "\n",
+    "   \n",
+    "    B. mass (optional, with default value of 1)\n",
+    "\n",
+    "   \n",
+    "    C. gravity (optional, with default value of 9.8\n",
+    "\n",
+    "2. Modify the function to also calculate and return the potential energy of the ball at time t.\n",
+    "\n",
+    "3. Write a second function that calls the height of mass function for values of t in the range [0, 3], with a step of 0.1. Store the outputs in two lists (one for the heights, and one for the potential energies). Use matplotlib to create a single plot showing height vs time and potential energy vs time. Then create a second plot showing what would happen if the ball was thrown on Mars (use gravity on mars = 3.73 $kg/m^2$. Your plot should look like the image below. Think carefully about how many (and which) functions you should use for this exercise and remember the rule of thumb: a function should do one thing.\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/BallHeight.png?raw=true\" width=\"40%\">\n",
+    "\n",
+    "4. (Bonus) Currently our solution continues to calculate values even when the height of the ball has gone below zero (i.e it's hit the ground). Modify the code to stop calculating results when the height of the ball goes below zero. These changes shouldn't break the code you've written previously!\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e43217e4-5e83-4b0e-9818-b0f79fef8e8e",
+   "id": "b8c9dd3d-d541-4ce9-acda-f311a04ef4e4",
    "metadata": {},
    "outputs": [],
    "source": []
