Fixed images URLs in numpy notebook

--- a/weekly_labs/Week_14_numpy/Numpy, Scipy.ipynb
+++ b/weekly_labs/Week_14_numpy/Numpy, Scipy.ipynb
@@ -5,6 +5,19 @@
    "id": "65c39f94-4813-4b9a-aa62-cb902787737c",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    "## Getting started\n",
+    "\n",
+    "Either:\n",
+    "\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_14_numpy/Numpy,%20Scipy.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "\n",
+    "or\n",
+    "\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_14_numpy` and open the notebook `Numpy, Scipy.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
+    "\n",
     "<h1> Introduction to Numpy and Scipy</h1>\n",
     "\n",
     "*NumPy* (**Num**erical **Py**thon) is a Python library extensively used for Scientific Computing. Although not part of the core Python library, NumPy is a fundamental part of the modern *Scientific Computing* technology stack and NumPy is used \"under the hood\" in many other libraries (e.g. in SciPy, SKLearn, or Pandas). Code that is written using NumPy is generally faster, more readable, and more likely to be correct!\n",
@@ -322,7 +335,9 @@
    "id": "b749d6f0-1169-499a-8f99-ab902b5d00f6",
    "metadata": {},
    "source": [
-    "![img](array_axes.png)\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/array_axes.png?raw=true\" width=\"20%\">\n",
+    "\n",
     "\n",
     "However, the syntax changes when we move from a 1D array to a 2D array. To access a single element of a 2D array, we need to specify two values-the index of the column and the index of the row. Both indices are specified within a single set of square brackets and separated by a comma (,). e.g. To get the top right element of a 2x2 matrix, we would access element [0, 0], while to access the bottom left element we would access element [1, 1]. e.g."
    ]
@@ -804,7 +819,8 @@
     "\n",
     "Let's take a quick look at the documentation for this function:\n",
     "\n",
-    "![img](odeint1.png)\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/odeint1.png?raw=true\" width=\"60%\">\n",
+    "\n",
     "\n",
     "Here, we can see that odeint is a function with 3 required arguments (func, y0, t) and 19(!!) optional arguments. We can also see that ths function will *Integrate a system of ordinary differential equations* by solving the initial value problem for  systems of first order ode-s:\n",
     "\n",
@@ -812,7 +828,7 @@
     "\n",
     "where y can be a vector. Fortunately, all of the optional arguments have default values, so we can assume (for now) that these are reasonable and just focus on understanding the three things that we need to provide. Scrolling down the documentation page, we get further information on what we need to provide for the function to work:\n",
     "\n",
-    "![img](odeint2.png)\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/odeint2.png?raw=true\" width=\"60%\">\n",
     "\n",
     "This tells us that the first argument (*func*) needs to be a callable (i.e. a function) that calculates the derivative of y at time t. The second argument y0 is an array that defines the initial condition and  the third argument t0 is an array that defines the time points for which to solve y for. It also tells us that the odeint function will return an array y (with shape len(t), len(y0). This array will contain the value of y for each desired time in t, with the initial value y0 in the first row.\n",
     "\n",
