--- a/consolidation_exercises/Week_13_consolidation_3_GoL/CellularAutomata.ipynb
+++ b/consolidation_exercises/Week_13_consolidation_3_GoL/CellularAutomata.ipynb
@@ -620,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0rc2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
