Fixed images links

--- a/weekly_labs/week_16_OOP_and_abstract_data_types/Classes_and_OOP.ipynb
+++ b/weekly_labs/week_16_OOP_and_abstract_data_types/Classes_and_OOP.ipynb
@@ -353,7 +353,7 @@
     "\n",
     "Stacks are often described as Last-In, First-Out (LIFO), as this is the order in which elements are added or removed from the stack. A simple analogy is a stack of physical objects (such as pieces of paper). When I'm given a new piece of paper, I put it on top of the pile. When it's time for me to start processing the pile, I start by removing the elements from the top, one at a time. \n",
     "\n",
-    "<img src=\"Lifo_stack.png\" width=\"425\"/> \n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/weekly_labs/week_16_OOP_and_abstract_data_types/Lifo_stack.png?raw=true\" width=425/> \n",
     "\n",
     "In Python, it's possible to just use a list as a stack (we can use the built-in *pop* and *append* methods), but we can make our code more readable by making a Stack class to represent our new data structure. The following code implements a basic stack:"
    ]
@@ -540,7 +540,7 @@
    "source": [
     "<h2> Trees and Binary Search </h2>\n",
     "\n",
-    "<img src=\"tree.svg\" width=\"425\"/> \n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/weekly_labs/week_16_OOP_and_abstract_data_types/tree.svg?raw=true\" width=425/> \n",
     "\n",
     "Another abstract data structure we'll look at today is a *tree*. Trees are a common data structure- probably you are most familiar with a tree structure from the file directory used to organise the files and folders on most computers. A *tree* is used to represent a set of nodes that are connected in some kind of heirarchical relationship. Each node can be connected to many *children*, but only one *parent*, except for the root node, which has no parent. In the image above, the root node is shown in red. It has two children, one with a value of 7, and one with a value of 5. \n",
     "\n",
