Fixed image links

--- a/consolidation_exercises/week_17_search/Search_problems.ipynb
+++ b/consolidation_exercises/week_17_search/Search_problems.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "Either:\n",
     "\n",
-    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/week_16_OOP_and_abstract_data_types/Classes_and_OOP.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/Search_problems.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
     "\n",
     "or\n",
     "\n",
     "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
-    "- Navigate to the subfolder `weekly_labs/Week_16_OOP_and_abstract_data_types/` and open the notebook `Classes_and_OOP.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
+    "- Navigate to the subfolder `consolidation_exercises/week_17_search/` and open the notebook `Search_problems.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
     "\n",
     "<h1> Search Algorithms </h1>\n",
     "\n",
@@ -143,11 +143,11 @@
    "source": [
     "<h2> Graphs </h2>\n",
     "\n",
-    "<img src=\"graph.png\" width=\"425\"/> \n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/graph.png?raw=true\" width=\"425\"/> \n",
     "\n",
     "The final abstract data structure we'll look at today is a graph. A graph $G = (V, E)$ consists of a set of vertices, $V$, connected by a set of edges $E$. Each vertex in a graph is associated with a particular value- i.e for the image below, node 1 has a value of 3. Edges in a graph may be undirected (if node i is connected to j, then j is also connected to i), or directed (node i can be connected to node j, but node j may not be connected to node i). Edges may optionally be associated with a weight or cost. We can use graphs to represent the relationships between a set of objects. e.g. to represent whether Alice and Bob know each other, whether we can travel from Park street to University row directly (or not), or whether a gene A increases activation of gene B. While Trees can also be used to represent relationships like this, the restrictions placed on trees (i.e you always have to have a root node), mean that some sets of relationships are best described with a graph. \n",
     "\n",
-    "<img src=\"simple_graph.png\" width=\"425\"/>\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/simple_graph.png?raw=true\" width=\"425\"/> \n",
     "\n",
     "As with our other abstract data types, we'll first need to write some code to represent a graph. In practice, there are a number of ways this could be achieved. We'll focus on two simple representations. The first approach we could use is to represent the set of nodes (with a list or numpy array) and the set of edges with an *adjancency* matrix. For example, we could represent the nodes in the image with a list:"
    ]
@@ -321,11 +321,11 @@
    "metadata": {},
    "source": [
     "**Exercise** The image below show the various regions of Bristol. Create a network to represent the connectivity of the blue regions. Assume that regions are connected regions that they share a border with.  \n",
-    "<img src=\"bristol_regions.png\" width=\"425\"/> \n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/bristol_regions.png?raw=true\" width=\"425\"/> \n",
     "\n",
     "You should re-produce the image below if your code is correct:\n",
     "\n",
-    "<img src=\"network_plot2.png\"> "
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/network_plot2.png?raw=true\" width=\"425\"/> "
    ]
   },
   {
@@ -699,7 +699,7 @@
    "id": "4a50c1e0-437f-4e14-9ec8-e86aa19fa877",
    "metadata": {},
    "source": [
-    "<img src=\"robot_search_1.png\" width=\"300\"/> <img src=\"robot_search_2.png\" width=\"300\"/> <img src=\"robot_search_3.png\" width=\"300\"/> \n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/robot_search_1.png?raw=true\" width=\"300\"/>  <img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/robot_search_2.png?raw=true\" width=\"300\"/><img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/robot_search_3.png?raw=true\" width=\"300\"/>\n",
     "\n",
     "<h3> Speeding up our planner with heuristic search</h3>\n",
     "\n",
@@ -723,7 +723,7 @@
     "\n",
     "A similar approach can also be used to find solutions to the number game Sudoku. For those who aren't familiar, Sudoku is a number placement game. Given a grid (of any size, but we'll stick to 9x9), we have to place the numbers 1-9 such that each row, column and square contains the numbers 1-9. We can represent a Sudoku grid with a numpy array. To solve the grid, we need to think about how we can translate it into a search problem- unlike in the previous example, we won't be able to generate and store the entire network in advance (there are 6,670,903,752,021,072,936,960 possible sudoku grids- more than we can reasonably store in memory). Instead, we'll need to start with a single node (representing one configuration of the board) and expand the network as we go. \n",
     "\n",
-    "<img src=\"Sudoku.png\">\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/consolidation_exercises/week_17_search/Sudoku.png?raw=true\" width=\"425\"/>\n",
     "\n",
     "To get you started, we've provided some functions to help you out:"
    ]
